[metadata]
name = replcraft-rexum
version = 1.5.1
author = rexum
author_email = lyamt23pk@mozmail.com
description = ReplCraft implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.rexum.space/rexum/replcraft-py
project_urls =
    Bug Tracker = https://git.rexum.space/rexum/replcraft-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src